Этап 5: Поиск пользователей, правки по работе аутентификации, немного аннотаций